// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryNav does not render stats section with just canViewSystemStats 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav loads notifications from cookies on mount 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav renders correctly with standard expected props 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav renders correctly with standard expected props but no logged in user 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/login"
      >
        Log in
      </a>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav renders null when document.cookie is null 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav renders null when there are no notifications but document.cookie is not null 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RepositoryNav renders stats section with canViewStatsPage 1`] = `
<div
  className="repository--section-wrapper repository--stick-to-top"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <nav
    className="repository--nav"
  >
    <a
      href="/"
    >
      <div
        className="repository--nav--logo"
      >
        Obojobo
      </div>
    </a>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/library"
      >
        Module Library
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </div>
    <div
      className="repository--nav--links--link"
    >
      <a
        href="/stats"
      >
        Stats
      </a>
    </div>
    <div
      className="repository--nav--current-user"
    >
      <button
        onClick={[Function]}
      >
        <div
          className="repository--nav--current-user--name"
        >
          Display Name
        </div>
        <div
          className="avatar repository--nav--current-user--avatar"
        >
          <div
            className="avatar--image"
          >
            <img
              alt=""
            />
          </div>
        </div>
      </button>
      <div
        className="repository--nav--current-user--menu is-not-open"
      >
        <div
          className="repository--nav--current-user--link"
        >
          <a
            href="/profile/logout"
          >
            Log Out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
